erDiagram
    users {
        BIGINT id PK
        VARCHAR email UK
        VARCHAR password_hash
        VARCHAR first_name
        VARCHAR last_name
        VARCHAR phone
        ENUM status
        DATETIME email_verified_at
        DATETIME last_login_at
        DATETIME deleted_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    user_groups {
        INT id PK
        VARCHAR code UK
        VARCHAR name
        TEXT description
        TINYINT is_system
    }

    services {
        INT id PK
        VARCHAR code UK
        VARCHAR name
        TEXT description
        ENUM area
        VARCHAR path
        ENUM http_method
        TINYINT is_menu_item
        INT menu_order
        TINYINT is_active
    }

    users_has_groups {
        BIGINT user_id PK
        INT group_id PK
        TIMESTAMP assigned_at
    }

    services_has_groups {
        INT service_id PK
        INT group_id PK
        TIMESTAMP granted_at
    }

    neighborhoods {
        INT id PK
        VARCHAR code UK
        VARCHAR name
        TEXT description
    }

    university_poles {
        INT id PK
        VARCHAR code UK
        VARCHAR name
        TEXT description
    }

    properties {
        INT id PK
        BIGINT landlord_id FK
        INT neighborhood_id FK
        VARCHAR title
        TEXT description
        VARCHAR address
        VARCHAR house_number
        VARCHAR postal_code
        INT total_rooms
        TINYINT has_elevator
        ENUM heating_type
    }

    rooms {
        INT id PK
        INT property_id FK
        VARCHAR name
        ENUM type
        DECIMAL price_monthly
        INT deposit_months
        TINYINT expenses_included
        VARCHAR contract_type
        TINYINT is_available
        ENUM status
    }

    amenities {
        INT id PK
        VARCHAR code UK
        VARCHAR name
        VARCHAR icon
    }

    room_has_amenities {
        INT room_id PK
        INT amenity_id PK
    }

    property_has_poles {
        INT property_id PK
        INT pole_id PK
        INT distance_minutes
        ENUM transit_type
    }

    property_images {
        INT id PK
        INT property_id FK
        VARCHAR filename
        TINYINT is_cover
        VARCHAR caption
    }

    bookings {
        INT id PK
        INT room_id FK
        BIGINT student_id FK
        ENUM status
        TEXT message
        DATE move_in_date
        DECIMAL deposit_amount
        DATETIME deposit_paid_at
        VARCHAR deposit_reference
    }

    booking_status_history {
        INT id PK
        INT booking_id FK
        ENUM status
        VARCHAR note
        BIGINT changed_by FK
    }

    messages {
        INT id PK
        INT booking_id FK
        BIGINT sender_id FK
        TEXT body
        DATETIME read_at
    }

    favorites {
        BIGINT user_id PK
        INT room_id PK
        TIMESTAMP created_at
    }

    reviews {
        INT id PK
        INT room_id FK
        BIGINT student_id FK
        TINYINT rating
        VARCHAR title
        TEXT body
        ENUM status
    }

    users ||--o{ users_has_groups : assigned_to
    user_groups ||--o{ users_has_groups : contains
    services ||--o{ services_has_groups : granted_to
    user_groups ||--o{ services_has_groups : receives
    users ||--o{ properties : owns
    neighborhoods ||--o{ properties : contains
    properties ||--o{ rooms : includes
    rooms ||--o{ room_has_amenities : has
    amenities ||--o{ room_has_amenities : describes
    properties ||--o{ property_has_poles : linked_to
    university_poles ||--o{ property_has_poles : reachable_from
    properties ||--o{ property_images : has
    rooms ||--o{ bookings : booked
    users ||--o{ bookings : student
    bookings ||--o{ booking_status_history : audited_by
    users ||--o{ booking_status_history : changed_by
    bookings ||--o{ messages : thread
    users ||--o{ messages : sends
    users ||--o{ favorites : saves
    rooms ||--o{ favorites : saved_as
    rooms ||--o{ reviews : reviewed
    users ||--o{ reviews : writes
